add some flexbox

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-wrap">
             <a class="logo" href="">
                 <img src="img/MoGo.png" alt="">
             </a>
@@ -44,9 +44,12 @@
                 <ul class="services-list">
                     <li class="services-item">
                         <img class="services-item-img" src="img/alarm 1.png" alt="alarm">
-                        <h4 class="services-item-title">photography</h4>
-                        <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor.</p>
+                        <div class="services-item-wrap">
+                            <h4 class="services-item-title">photography</h4>
+                            <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do
+                                eiusmod tempor.</p>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-item-img" src="img/bar-graph 1.png" alt="bar-graph">
