--- a/index.html
+++ b/index.html
@@ -53,33 +53,48 @@
                     </li>
                     <li class="services-item">
                         <img class="services-item-img" src="img/bar-graph 1.png" alt="bar-graph">
-                        <h4 class="services-item-title">photography</h4>
-                        <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor.</p>
+                        <div class="services-item-wrap">
+                            <h4 class="services-item-title">photography</h4>
+                            <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do
+                                eiusmod tempor.</p>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-item-img" src="img/display 1.png" alt="display">
-                        <h4 class="services-item-title">photography</h4>
-                        <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor.</p>
+                        <div class="services-item-wrap">
+                            <h4 class="services-item-title">photography</h4>
+                            <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do
+                                eiusmod tempor.</p>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-item-img" src="img/paper 1.png" alt="paper">
-                        <h4 class="services-item-title">photography</h4>
-                        <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor.</p>
+                        <div class="services-item-wrap">
+                            <h4 class="services-item-title">photography</h4>
+                            <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do
+                                eiusmod tempor.</p>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-item-img" src="img/home 1.png" alt="home">
-                        <h4 class="services-item-title">photography</h4>
-                        <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor.</p>
+                        <div class="services-item-wrap">
+                            <h4 class="services-item-title">photography</h4>
+                            <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do
+                                eiusmod tempor.</p>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-item-img" src="img/digital-marketing 1.png" alt="digital-marketing">
-                        <h4 class="services-item-title">photography</h4>
-                        <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor.</p>
+                        <div class="services-item-wrap">
+                            <h4 class="services-item-title">photography</h4>
+                            <p class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do
+                                eiusmod tempor.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -129,7 +144,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-wrap">
             <p class="footer-copy">© 2016 MoGo free PSD template by <a class="footer-copy-name" href="/">Laaqiq</a></p>
             <form class="footer-form">
                 <input class="footer-form-input" type="email" placeholder="Your Email...">
